# match-compute

./: .gitignore  Cargo.toml
data/: ids.txt  payloads.txt
legacy/: run_experiment.sh
legacy/client/: run_client.rs
legacy/server/: run_server.rs  server_thread.rs
match-compute-parallel/: configuration.txt  run_experiment.bat  run_experiment.sh
match-compute-parallel/client/: client_thread.rs  join_aggregates_client.rs  prepare_files_client.rs  run_client.rs
match-compute-parallel/server/: run_server.rs
popsicle/: Cargo.toml
popsicle/src/: cuckoo.rs  lib.rs
popsicle/src/psi/: psty_payload.rs
scripts/: run_experiment.sh  run_parallel.sh  run_simple.sh
src/: lib.rs  utils.rs
src/config/: configuration.txt
src/parallel/: client.rs  mod.rs  server.rs
src/parallel/client/: client.rs
src/parallel/server/: delta.txt  server.rs
src/parallel/server_utils/: mod.rs  prepare_files.rs
src/simple/: client.rs  server.rs
src/util/: mod.rs
