[profile.release]
opt-level = 3

[package]
name = "match-compute"
version = "0.1.0"
authors = ["Rawanne Issa <rissa@galois.com>"]
edition = "2018"

[dependencies]
scuttlebutt    = { git = "https://github.com/Ra1issa/swanky.git",  features = ["serde1"] }
fancy-garbling = { git = "https://github.com/Ra1issa/swanky.git", features = ["serde1"]}
popsicle       = { git = "https://github.com/Ra1issa/swanky.git", features = ["psty_payload"]}
bincode        = "1.3.2"
serde_json     = "1.0.64"
rand           = "0.7.3"

[[bin]]
name = "simple-client"
path = "match-compute-simple/client.rs"

[[bin]]
name = "simple-server"
path = "match-compute-simple/server.rs"

[[bin]]
name = "parallel-client"
path = "match-compute-parallel/client/run_client.rs"

[[bin]]
name = "parallel-server"
path = "match-compute-parallel/server/run_server.rs"
