[profile.release]
opt-level = 3

[package]
name = "match-compute"
version = "0.1.0"
authors = ["Ra1issa <ra1issa@bu.edu>"]
edition = "2018"

[dependencies]
scuttlebutt    = { git = "https://github.com/Ra1issa/swanky.git",  features = ["serde1"], branch = "main" }
fancy-garbling = { git = "https://github.com/Ra1issa/swanky.git", features = ["serde1"], branch = "main"}
popsicle       = { git = "https://github.com/Ra1issa/swanky.git", features = ["psty_payload"], branch = "main"}
bincode        = "1.3.2"
serde_json     = "1.0.64"
rand           = "0.7.3"

[lib]

[[bin]]
name = "parallel-client"
path = "src/bin/parallel-client/main.rs"

[[bin]]
name = "parallel-server"
path = "src/bin/parallel-server/main.rs"

[[bin]]
name = "simple-client"
path = "src/bin/simple-client.rs"

[[bin]]
name = "simple-server"
path = "src/bin/simple-server.rs"
